--- a/www/index.html
+++ b/www/index.html
@@ -34,10 +34,11 @@
     <script src="js/app.js"></script>
   </head>
   <body ng-app="local">
-    <ion-nav-bar class="bar-positive" >     
+    
+    <!-- <ion-nav-bar class="bar-positive" >     
       <ion-nav-back-button side="left" class="button-icon icon ion-arrow-left-c"> 
       </ion-nav-back-button>
-    </ion-nav-bar>
+    </ion-nav-bar> -->
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
